feat(ai-chat): 배치2b-2 — 속성 요청(수랭·PCIe·통풍) 이해·스펙비교 카드 신설
"쿨러를 수랭으로", "SSD를 PCIe 5.0으로", "통풍 좋은 케이스"처럼 구체 모델명이
아닌 속성으로 요청하면 지금까지 전부 "구체적으로 알려주세요" dead-end였다.
속성 해석은 LLM이, 조회는 DB가 하도록 신설(서버 키워드 사전 없음). 계약 무변경.

- LLM partConstraint 스키마에 닫힌 속성 3필드 추가(coolingType AIR|LIQUID,
  pcieGeneration int, airflowFocused bool). 시스템 프롬프트 예시로 LLM이 자연어를
  이 값으로 매핑. 서버는 값으로 DB 조회만.
- FeasibilityService에 속성 술어(coolerType=LIQUID_AIO, generation PCIe세대>=N,
  airflowFocus=true) + textAttribute/boolAttribute 헬퍼. 스코프 3종 락.
- 라우팅 seam: SIMULATE에서 target 미해상 + 카테고리∈{쿨러,SSD,케이스}+드래프트에
  존재면 clarification dead-end 대신 LLM fall-through(속성 구조화 기회). GPU/보드
  /CPU/RAM/PSU는 기존 안전망 유지(배치1 verifyNoInteractions 테스트 그린).
- 산출물: 드래프트에 같은 카테고리 있으면 1:1 스펙비교 카드(현재부품 vs 속성 최적
  후보, 기존 simulationPayload 재사용), 없으면 속성 충족 후보 나열+담기 칩 폴백.
- exact 캐시 v23→v24.

실측(재기동 후): 세 요청 전부 dead-end 제거 — 수랭 교체 미리보기, PCIe 5.0 SSD
1:1 카드, 통풍 케이스 1:1 카드. gradle 전체 그린(신규 4건).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>